Fixed Stretched Boxes

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-html, #App, .ImgLink img {
+html, #App, #root, .ImgLink img {
   width: 100%;
   height: 100%;
 }
